# DataForge

./: MANIFEST.in  README.md  employees.csv  employees.db  employees.json  employees.sql  employees.txt  employees.xlsx  pyproject.toml  requirements.txt  setup.py
dataforge/: __init__.py  cli.py  config.py  exceptions.py  exporter.py  forge.py  generator.py  schema.py  validator.py
dataforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dataforge/exporters/: csv_export.py  excel_export.py  json_export.py  sql_export.py  sqlite_export.py  txt_export.py
dataforge/providers/: __init__.py  address.py  base.py  company.py  email.py  name.py  password.py  phone.py  salary.py  uuid.py
dataforge/utils/: helpers.py  parser.py  randomizer.py
examples/: basic.py  custom_schema.py  export_all.py  export_csv.py  export_json.py
tests/: test_basic.py  test_export.py  test_schema.py
